@@ -51,14 +51,14 @@ import org.thymeleaf.standard.processor.attr.StandardDOMEventAttributeModifierAt
 import org.thymeleaf.standard.processor.attr.StandardEachAttrProcessor;
 import org.thymeleaf.standard.processor.attr.StandardFragmentAttrProcessor;
 import org.thymeleaf.standard.processor.attr.StandardIfAttrProcessor;
-import org.thymeleaf.standard.processor.attr.StandardIncludeAttrProcessor;
+import org.thymeleaf.standard.processor.attr.StandardIncludeFragmentAttrProcessor;
 import org.thymeleaf.standard.processor.attr.StandardInlineAttrProcessor;
 import org.thymeleaf.standard.processor.attr.StandardLangXmlLangAttrProcessor;
 import org.thymeleaf.standard.processor.attr.StandardObjectAttrProcessor;
 import org.thymeleaf.standard.processor.attr.StandardRemoveAttrProcessor;
 import org.thymeleaf.standard.processor.attr.StandardSingleNonRemovableAttributeModifierAttrProcessor;
 import org.thymeleaf.standard.processor.attr.StandardSingleRemovableAttributeModifierAttrProcessor;
-import org.thymeleaf.standard.processor.attr.StandardSubstituteByAttrProcessor;
+import org.thymeleaf.standard.processor.attr.StandardSubstituteByFragmentAttrProcessor;
 import org.thymeleaf.standard.processor.attr.StandardSwitchAttrProcessor;
 import org.thymeleaf.standard.processor.attr.StandardTextAttrProcessor;
 import org.thymeleaf.standard.processor.attr.StandardUnlessAttrProcessor;
@@ -513,12 +513,12 @@ public class StandardDialect extends AbstractXHTMLEnabledDialect {
         processors.add(new StandardIfAttrProcessor());
         processors.add(new StandardInlineAttrProcessor());
         processors.add(new StandardUnlessAttrProcessor());
-        processors.add(new StandardIncludeAttrProcessor());
+        processors.add(new StandardIncludeFragmentAttrProcessor());
         processors.add(new StandardLangXmlLangAttrProcessor());
         processors.add(new StandardRemoveAttrProcessor());
         processors.addAll(Arrays.asList(StandardSingleNonRemovableAttributeModifierAttrProcessor.PROCESSORS));
         processors.addAll(Arrays.asList(StandardSingleRemovableAttributeModifierAttrProcessor.PROCESSORS));
-        processors.add(new StandardSubstituteByAttrProcessor());
+        processors.add(new StandardSubstituteByFragmentAttrProcessor());
         processors.add(new StandardSwitchAttrProcessor());
         processors.add(new StandardTextAttrProcessor());
         processors.add(new StandardUtextAttrProcessor());
